@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: wgraph.c,v 1.67.2.4 2009/09/06 16:55:49 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: wgraph.c,v 1.67.2.5 2009/12/23 04:08:10 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - win/wgraph.c */
@@ -932,8 +932,8 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 		if (cur_pen > WGNUMPENS)
 		    cur_pen = cur_pen % WGNUMPENS;
 		if (cur_pen <= LT_BACKGROUND) {
-		    cur_pen = 1;
-		    cur_penstruct = lpgw->colorpen[1];
+		    cur_pen = 0;
+		    cur_penstruct = lpgw->colorpen[0];
 		    cur_penstruct.lopnColor = lpgw->background;
 		} else {
 		    cur_pen += 2;
